--- a/ASSIGNMENT_4.ipynb
+++ b/ASSIGNMENT_4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOzhC7WHzUVNEIqlnMKunb2",
+      "authorship_tag": "ABX9TyOlF10fvF5XjWdXdhTk2OLG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,68 +114,58 @@
         "    decoded = self.decoder(encoded)\n",
         "    return decoded\n",
         "\n",
-        "autoencoder = Autoencoder(latent_dim)"
-      ],
-      "metadata": {
-        "id": "Z3mTCLfKgRDK"
-      },
-      "execution_count": 4,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "autoencoder = Autoencoder(latent_dim)\n",
         "autoencoder.compile(optimizer='adam', loss=losses.MeanSquaredError())\n",
         "\n",
         "autoencoder.fit(x_train, x_train,\n",
         "                epochs=10,\n",
         "                shuffle=True,\n",
-        "                validation_data=(x_test, x_test))\n"
+        "                validation_data=(x_test, x_test))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "eurnegssgYHa",
-        "outputId": "3b5c23a4-c726-4c3e-c05d-e1836617ed8f"
+        "id": "Z3mTCLfKgRDK",
+        "outputId": "249331a8-bf36-442d-c6be-4bf7bd160d0f"
       },
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/10\n",
-            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0242 - val_loss: 0.0132\n",
+            "1875/1875 [==============================] - 7s 3ms/step - loss: 0.0236 - val_loss: 0.0129\n",
             "Epoch 2/10\n",
-            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0116 - val_loss: 0.0106\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0114 - val_loss: 0.0104\n",
             "Epoch 3/10\n",
-            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0101 - val_loss: 0.0097\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0099 - val_loss: 0.0096\n",
             "Epoch 4/10\n",
             "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0094 - val_loss: 0.0093\n",
             "Epoch 5/10\n",
-            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0091 - val_loss: 0.0091\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0091 - val_loss: 0.0091\n",
             "Epoch 6/10\n",
             "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0090 - val_loss: 0.0090\n",
             "Epoch 7/10\n",
             "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0089 - val_loss: 0.0089\n",
             "Epoch 8/10\n",
-            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0088 - val_loss: 0.0088\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0088 - val_loss: 0.0089\n",
             "Epoch 9/10\n",
-            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0087 - val_loss: 0.0088\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0088 - val_loss: 0.0087\n",
             "Epoch 10/10\n",
-            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0087 - val_loss: 0.0088\n"
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0087 - val_loss: 0.0088\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f446963ca50>"
+              "<keras.callbacks.History at 0x7f445fbb1c10>"
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 10
         }
       ]
     },
